# poc-kafka-caller-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: errors.rs  io.rs  lib.rs  tests.rs  utils.rs
src/io/: call_state.rs  messages.rs  records.rs
src/io/messages/: api_versions.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  init_producer_id.rs  join_group.rs  leave_group.rs  list_offsets.rs  metadata.rs  offset_commit.rs  offset_fetch.rs  produce.rs  sync_group.rs
