[package]
name = "poc-kafka-caller-rs"
version="0.1.0"
edition="2021"
rust-version="1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#kafka-protocol = "0.7.0"
kafka-protocol = { git="https://github.com/vdobos/kafka-protocol-rs.git", branch="kafka_3_6_0_update" }
bytes = "1.5.0"
uuid = "1.5.0"
string = "0.3.0"
indexmap = "2.1.0"
tokio = { version = "1.35.0", features = ["full"] }